--- a/package.json
+++ b/package.json
@@ -2,23 +2,42 @@
     "name": "node-server",
     "version": "1.0.0",
     "scripts": {
-      "build": "tsc",
-      "start": "node dist/server.js"
+        "build": "tsc",
+        "start": "nodemon dist/server.js",
+        "socket_connect": "nodemon dist/socketServer.js"
     },
     "dependencies": {
-      "express": "^4.17.1",
-      "mongoose": "^6.0.0",
-      "bcrypt": "^5.0.1",
-      "jsonwebtoken": "^8.5.1",
-      "dotenv": "^10.0.0",
-      "cluster": "^0.7.7"
+        "amqplib": "^0.10.4",
+        "axios": "^1.7.7",
+        "bcrypt": "^5.0.1",
+        "cluster": "^0.7.7",
+        "dotenv": "^10.0.0",
+        "express": "^4.17.1",
+        "file-extension": "^4.0.5",
+        "jsonwebtoken": "^8.5.1",
+        "llamaindex": "^0.8.21",
+        "mime": "^4.0.4",
+        "mime-types": "^2.1.35",
+        "moment": "^2.30.1",
+        "mongoose": "^6.0.0",
+        "node-fetch": "^3.3.2",
+        "openai": "^4.73.0",
+        "path": "^0.12.7",
+        "pdf-parse": "^1.1.1",
+        "readline-sync": "^1.4.10",
+        "slugify": "^1.6.6",
+        "socket.io": "^4.8.0",
+        "ts-node": "^10.9.2",
+        "uuid": "^10.0.0"
     },
     "devDependencies": {
-      "typescript": "^4.4.2",
-      "@types/express": "^4.17.13",
-      "@types/node": "^16.10.2",
-      "@types/bcrypt": "^5.0.0",
-      "@types/jsonwebtoken": "^8.5.1"
+        "@types/amqplib": "^0.10.5",
+        "@types/bcrypt": "^5.0.0",
+        "@types/express": "^4.17.13",
+        "@types/jsonwebtoken": "^8.5.1",
+        "@types/mime-types": "^2.1.4",
+        "@types/node": "^16.18.119",
+        "@types/uuid": "^10.0.0",
+        "typescript": "^4.4.2"
     }
-  }
-  
+}
